--- a/myTable.css
+++ b/myTable.css
@@ -13,8 +13,9 @@ body {
     border-collapse: collapse;
 }
 
-
-mainTable, td, th {
+mainTable,
+td,
+th {
     border: 1px solid rgb(138, 131, 131);
 }
 
@@ -22,4 +23,38 @@ mainTable, td, th {
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+}
+
+/* 分页样式 */
+.pageConf,
+.pageConf * {
+    display: inline;
+}
+
+.ui-page {
+    display: inline-flex;
+}
+
+.pagination {
+    margin: 0;
+}
+
+.ui-page>* {
+    margin-right: 10px;
+}
+
+.ui-page input[type="text"],
+.ui-page select {
+    width: 34px;
+    height: 34px;
+    line-height: 34px;
+    text-align: center;
+    border: 1px solid #eee;
+    margin: 0 4px;
+    background-color: #fff;
+    border-radius: 0;
+}
+
+.ui-page select {
+    width: auto;
 }
