--- a/angular-require-case-master/css/app.css
+++ b/angular-require-case-master/css/app.css
@@ -1,38 +1,11 @@
-
-
 /*-----base-----*/
-body,html{
+
+body,
+html,
+.ui-view-style {
     height: 100%;
     width: 100%;
-}
-
-/*-----indexPage-----*/
-footer{
-    text-align: center;
-    background: #3B8974;
-    color: #fff;
-    height: 50px;
-    line-height: 50px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/*-----homePage-----*/
-.homeHeader{
-    height: 80px;
-    width: 100%;
-    text-align: center;
-    border-bottom: 1px solid #eee;}
-
-
-.menu-bar{
-    width: 150px;
-    float: left;
-    border-right: 1px solid #eee;
-}
-
-.main-content{
-    height: 100%;
-    margin-left: 160px;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
